# course-registration-service

./: Courses.txt  README.md
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h  serverMassage.h  serverMessage.h  userMassage.h  userMessage.h
Client/src/: CMakeLists.txt  client.cpp  connectionHandler.cpp  echoClient.cpp  serverMassage.cpp  serverMessage.cpp  userMassage.cpp  userMessage.cpp  userMessage_.cpp
Server/src/main/java/bgu/spl/net/api/: Message.java  MessageEncoderDecoder.java  MessagingProtocol.java  ResponseMessage.java
Server/src/main/java/bgu/spl/net/srv/: ActorThreadPool.java  BGRSProtocol.java  BaseServer.java  Client.java  Clients.java  Course.java  Courses.java  Database.java  MessageHandler.java  NonBlockingConnectionHandler.java  Reactor.java  User.java
Server/src/main/java/cli_course_reg/api/: Message.java  MessageEncoderDecoder.java  MessagingProtocol.java  ResponseMessage.java
Server/src/main/java/cli_course_reg/impl/BGRSServer/: BGRSProtocol.java  Main.java  MessageEncoderDecoderImpl.java  NoParameterResponseMessage.java  OneIntegerMessage.java  OneStringMessage.java  OneStringResponseMessage.java  ReactorMain.java  TPCMain.java  TwoStringsMessage.java
Server/src/main/java/cli_course_reg/srv/: ActorThreadPool.java  BaseServer.java  BlockingConnectionHandler.java  Client.java  Clients.java  ConnectionHandler.java  Course.java  Courses.java  Database.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java  User.java
Server/src/main/resources/: Course.java  Database.java
(+20 files in other folders)
